--- a/index.html
+++ b/index.html
@@ -4,9 +4,223 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>ASTR-1010-1020</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/ae32b61758.js" crossorigin="anonymous"></script>
+    <style>
+    a,
+    a:active,
+    a:focus {
+        color: #6f6f6f;
+        text-decoration: none;
+        transition-timing-function: ease-in-out;
+        -ms-transition-timing-function: ease-in-out;
+        -moz-transition-timing-function: ease-in-out;
+        -webkit-transition-timing-function: ease-in-out;
+        -o-transition-timing-function: ease-in-out;
+        transition-duration: .2s;
+        -ms-transition-duration: .2s;
+        -moz-transition-duration: .2s;
+        -webkit-transition-duration: .2s;
+        -o-transition-duration: .2s;
+    }
+    .fancy-title-view1 {
+        float: left;
+        width: 100%;
+        margin-bottom: 70px;
+        text-align: center;
+    }
+    .fancy-title-view1 h2 {
+        margin-bottom: 8px;
+        font-size: 40px;
+        font-weight: 700;
+        display: block;
+    }
+    .fancy-title-view1 p {
+        margin-bottom: 0px;
+        display: inline-block;
+        width: 65%;
+    }
+    .fancy-title-view1 i {
+        font-size: 22px; }
+    .fancy-title-view1-color h2,
+    .fancy-title-view1-color p {
+        color: #ffffff;
+    }
+
+            .light-transparent {
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        width: 100%;
+        height: 100%;
+        opacity: 0.65;
+        background-color: #000;
+    }
+    .categories-view1-full {
+        padding: 80px 0px 80px 0px;
+        margin-top: 0;
+        margin-bottom: 0;
+        background: url(https://i.ibb.co/r4xf3sK/newslater.jpg);
+        background-attachment: fixed;
+        position: relative;
+        min-height: 100vh;
+    }
+    .categories,.categories-view1-wrap {
+        float: left;
+        width: 100%;
+    }
+    .categories ul li       { list-style: none; }
+    .categories > ul > li   {
+        float: none;
+        display: inline-block;
+        margin: 0px 0px 30px 0px;
+        vertical-align: top;
+    }
+    .categories-view1-wrap {
+        box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.08);
+        padding: 30px 50px 30px 95px;
+        border-radius: 10px;
+        position: relative;
+        background-color: #ffffff;
+    }
+    .categories-view1 i {
+        position: absolute;
+        left: 0px;
+        top: 50%;
+        font-size: 30px;
+            color: #fb236a;
+        width: 70px;
+        height: 70px;
+        border-radius: 0 100% 100% 0;
+        text-align: center;
+        padding-top: 18px;
+        margin-top: -36px;
+        background-color: #ffffff;
+        border: 1px solid #eee;
+        border-left: none;
+        -webkit-transition: all 0.4s ease-in-out;
+        -moz-transition: all 0.4s ease-in-out;
+            -ms-transition: all 0.4s ease-in-out;
+            -o-transition: all 0.4s ease-in-out;
+                transition: all 0.4s ease-in-out;
+    }
+    .categories-view1 li:hover i {
+        color: #ffffff;
+        background-color: #274160;
+    }
+    .categories-view1 a {
+        display: block;
+        font-size: 18px;
+        font-weight: 700;
+        margin-bottom: 0px;
+    }
+    .categories-view1 small {
+        font-size: 13px;
+        color: #666;
+    }
+    .categories-view1 span {
+        position: absolute;
+        right: 5px;
+        top: 8px;
+        font-size: 90px;
+        font-weight: 500;
+        color: #999;
+        opacity: 0.07;
+        line-height: 1;
+    }
+    .main-load-btn {
+        float: left;
+        width: 100%;
+        text-align: center;
+        margin: 30px 0px;
+    }
+    .main-load-btn a {
+        display: inline-block;
+        line-height: 1;
+        padding: 18px 45px;
+        color: #ffffff;
+        border-radius: 40px;
+        font-size: 16px;
+        font-weight: 600;
+        -webkit-transition: all 0.4s ease-in-out;
+        -moz-transition: all 0.4s ease-in-out;
+        -ms-transition: all 0.4s ease-in-out;
+        -o-transition: all 0.4s ease-in-out;
+        transition: all 0.4s ease-in-out;
+        background-color: #fb236a;
+    }
+    .main-load-btn a:hover {
+        background-color: #274160;
+    }
+    .more-spacer {
+        float: left;
+        width: 100%;
+        margin: 10px 0px;
+    }
+    </style>
 </head>
 <body>
-    <h1>test</h1>
+    <div class="main-section categories-view1-full">
+        <span class="light-transparent"></span>
+        <div class="container">
+            <div class="row">
+
+                <div class="col-md-12">
+                    
+                    <!-- FancyTitle -->
+                    <div class="fancy-title-view1 fancy-title-view1-color">
+                        <h2>ASTR-1010-1020</h2>
+                        <p>Projects for ALG grant by Clayton State University</p>
+                    </div>
+                    <!-- FancyTitle -->
+
+                    <!-- Categories List -->
+                    <div class="categories categories-view1">
+                        <ul class="row">
+                            <li class="col-md-4">
+                                <div class="categories-view1-wrap">
+                                    <i class="fas fa-sun"></i>
+                                    <a href="https://aiakovlev.github.io/ASTR-1010-1020/Sun%20rotation" target="_blank">Sun rotation project</a>
+                                    <small>Measure the Sun's Rotation Period</small>
+                                    <span>01</span>
+                                </div>
+                            </li>
+                            <li class="col-md-4">
+                                <div class="categories-view1-wrap">
+                                    <i class="fas fa-moon"></i>
+                                    <a href="https://aiakovlev.github.io/ASTR-1010-1020/Moon%20app/" target="_blank">Moon app</a>
+                                    <small>Tool for moon observation logging</small>
+                                    <span>02</span>
+                                </div>
+                            </li>
+                            <li class="col-md-4">
+                                <div class="categories-view1-wrap">
+                                    <i class="fas fa-atlas"></i>
+                                    <a href="https://aiakovlev.github.io/ASTR-1010-1020/Secret%20agent%20report" target="_blank">Secret agent report</a>
+                                    <small>Complete a report about Solar System</small>
+                                    <span>03</span>
+                                </div>
+                            </li>
+                            <li class="col-md-4">
+                                <div class="categories-view1-wrap">
+                                    <i class="fab fa-battle-net"></i>
+                                    <a href="https://aiakovlev.github.io/ASTR-1010-1020/Extrasolar%20planet%20agent%20report" target="_blank">Extrasolar planet agent report</a>
+                                    <small>Complete a report about Extrasolar planets</small>
+                                    <span>04</span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- Categories List -->
+
+                    <div class="more-spacer"></div>
+                    <div class="main-load-btn"> <a href="https://github.com/aiakovlev/ASTR-1010-1020" target="_blank">Browse GitHub repository</a> </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
