--- a/Secret agent report/index.html
+++ b/Secret agent report/index.html
@@ -11101,7 +11101,7 @@ legend {
       </div>
 
       <div id="step3_2" class="row hidden_by_default">
-        <div class="col-lg-8 offset-lg-2">
+        <div class="col-lg-12">
           <div class="card border-secondary">
             <div class="card-header text-white text-center"><h3>Report on <span class="step3_report_header" ></span></h3></div>
             <div id="editor" class="card-body ">
@@ -11132,8 +11132,8 @@ legend {
           <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
             <button type="button" class="btn btn-success" onclick="window.print()"><i class="fa fa-print" style="font-size:36px"></i><br>Print the report</button>
             <div class="btn-group" role="group">
-              <button id="btnGroupDrop" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-              <div class="dropdown-menu" aria-labelledby="btnGroupDrop">
+              <button id="btnGroupDrop2" type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+              <div class="dropdown-menu" aria-labelledby="btnGroupDrop2">
                 <a class="dropdown-item" href="#" onclick="generatePDF()">Generate PDF as a screenshot</a>
               </div>
             </div>
@@ -11212,19 +11212,38 @@ legend {
     <script src="https://raw.githack.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js"></script>
     <script>
       function generatePDF(){
+        // $('.hidden_by_default').hide();
+        // $('#report_summary').show();
+        $('.ck-sticky-panel').hide();
+        $('#step3_3').hide();
+        $('body').css('background','#ffffff');
+        $('body').css('color','#000000');
+
+
         // const element = document.getElementsByTagName("body")[0];
         // html2pdf().from(element).save("asdasda");
         var element = document.getElementsByTagName("body")[0];
         var opt = {
-          margin:       0,
-          filename:     'myfile.pdf',
-          image:        { type: 'jpeg', quality: 0.98 },
-          html2canvas:  { scale: 1, },
-          jsPDF:        { unit: 'in', format: 'letter', orientation: 'landscape' }
+          margin: [0, 5, 5, 5],
+          filename: 'my_report.pdf',
+          image: { type: 'jpeg', quality: 1 },
+          html2canvas: {
+            dpi: 300,
+            scale:5,
+            letterRendering: true,
+            useCORS: true
+          },
+          jsPDF: { unit: 'mm', format: 'letter', orientation: 'portrait' }
         };
 
         // New Promise-based usage:
         html2pdf().set(opt).from(element).save();
+        setTimeout(() => {
+          $('.ck-sticky-panel').show();
+          $('#step3_3').show();
+          $('body').css('background','#272b30');
+          $('body').css('color','#ffffff');
+        }, 500);
       }
     </script>
 
