--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASTR-1010-1020</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/ae32b61758.js" crossorigin="anonymous"></script>
     <style>
     a,
@@ -58,13 +61,12 @@
         background-color: #000;
     }
     .categories-view1-full {
-        padding: 80px 0px 80px 0px;
-        margin-top: 0;
-        margin-bottom: 0;
-        background: url(https://i.ibb.co/r4xf3sK/newslater.jpg);
-        background-attachment: fixed;
-        position: relative;
+
+        background: url(https://pixabay.com/get/gd1fc4a475aec9a9178af9d432e124c4542fd6e068bfcbb521f522adf6603e4e7e6aadcc9a424c4553873b50e28d1d70d599fa913004d08fe016292aaf582dc1f_1280.png);
         min-height: 100vh;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
     .categories,.categories-view1-wrap {
         float: left;
@@ -169,7 +171,7 @@
                 <div class="col-md-12">
                     
                     <!-- FancyTitle -->
-                    <div class="fancy-title-view1 fancy-title-view1-color">
+                    <div class="fancy-title-view1 fancy-title-view1-color mt-5">
                         <h2>ASTR-1010-1020</h2>
                         <p>Projects for ALG grant by Clayton State University</p>
                     </div>
@@ -178,7 +180,7 @@
                     <!-- Categories List -->
                     <div class="categories categories-view1">
                         <ul class="row">
-                            <li class="col-md-4">
+                            <li class="col-lg-4 col-md-6">
                                 <div class="categories-view1-wrap">
                                     <i class="fas fa-sun"></i>
                                     <a href="https://aiakovlev.github.io/ASTR-1010-1020/Sun%20rotation" target="_blank">Sun rotation project</a>
@@ -186,7 +188,7 @@
                                     <span>01</span>
                                 </div>
                             </li>
-                            <li class="col-md-4">
+                            <li class="col-lg-4 col-md-6">
                                 <div class="categories-view1-wrap">
                                     <i class="fas fa-moon"></i>
                                     <a href="https://aiakovlev.github.io/ASTR-1010-1020/Moon%20app/" target="_blank">Moon app</a>
@@ -194,7 +196,7 @@
                                     <span>02</span>
                                 </div>
                             </li>
-                            <li class="col-md-4">
+                            <li class="col-lg-4 col-md-6">
                                 <div class="categories-view1-wrap">
                                     <i class="fas fa-atlas"></i>
                                     <a href="https://aiakovlev.github.io/ASTR-1010-1020/Secret%20agent%20report" target="_blank">Secret agent report</a>
@@ -202,7 +204,7 @@
                                     <span>03</span>
                                 </div>
                             </li>
-                            <li class="col-md-4">
+                            <li class="col-lg-4 col-md-6">
                                 <div class="categories-view1-wrap">
                                     <i class="fab fa-battle-net"></i>
                                     <a href="https://aiakovlev.github.io/ASTR-1010-1020/Extrasolar%20planet%20agent%20report" target="_blank">Extrasolar planet agent report</a>
@@ -212,6 +214,8 @@
                             </li>
                         </ul>
                     </div>
+
+                    
                     <!-- Categories List -->
 
                     <div class="more-spacer"></div>
