--- a/Extrasolar planet agent report/index.html
+++ b/Extrasolar planet agent report/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Secret Agent Report</title>
+    <title>Extrasolar planet agent report</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="stylesheet" href="bootstrap.css"> -->
     <!-- <link rel="stylesheet" href="custom.min.css"> -->
