--- a/Secret agent report/index.html
+++ b/Secret agent report/index.html
@@ -11115,7 +11115,7 @@ legend {
           </div>
         </div>
 
-        <div id="step3_3" class="col-lg-8 offset-lg-2 text-center d-print-none mb-5">
+        <div id="step3_3" class="col-lg-8 offset-lg-2 text-center d-print-none mb-5 mt-2">
           <!-- <label class="btn btn-info">
             <i class="fa fa-photo" style="font-size:36px"></i><br>Add more images<input class="uploader" type="file" hidden>
           </label>
@@ -11130,6 +11130,12 @@ legend {
           </div>
 
           <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+            <button id="add_more_img" type="button" class="btn btn-success" onclick="window.print()">
+              <i class="fa fa-print" style="font-size:36px"></i><br>Print report
+            </button>
+          </div>
+
+          <!-- <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
             <button type="button" class="btn btn-success" onclick="window.print()"><i class="fa fa-print" style="font-size:36px"></i><br>Print the report</button>
             <div class="btn-group" role="group">
               <button id="btnGroupDrop2" type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
@@ -11137,7 +11143,7 @@ legend {
                 <a class="dropdown-item" href="#" onclick="generatePDF()">Generate PDF as a screenshot</a>
               </div>
             </div>
-          </div>
+          </div> -->
           
           
         </div>
