--- a/index.html
+++ b/index.html
@@ -208,6 +208,13 @@
                                     <small>Complete a report about Extrasolar planets</small>
                                 </div>
                             </li>
+                            <li class="col-lg-4 col-md-6">
+                                <div class="categories-view1-wrap">
+                                    <i class="fas fa-atom"></i>
+                                    <a href="https://aiakovlev.github.io/ASTR-1010-1020/Cosmology%20project" target="_blank">Cosmology project</a>
+                                    <small>Start to do your cosmology project with the help of initial ideas.</small>
+                                </div>
+                            </li>
                         </ul>
                     </div>
 
